画像のパスを変更

--- a/20180204/mrexchange_creaters_meetup/index.html
+++ b/20180204/mrexchange_creaters_meetup/index.html
@@ -92,7 +92,7 @@
 
 						### Dappの例
 						[CryptoKittiesの記事](http://jp.techcrunch.com/2017/12/04/2017-12-03-people-have-spent-over-1m-buying-virtual-cats-on-the-ethereum-blockchain/)
-						![CryptoKitties](image/CryptoKitties.png)
+						![CryptoKitties](image/cryptokitties.png)
 
 						---
 
